fix loi question